--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @section header {
     <style type="text/css">
         .DashletModule { font-size:18px;
-            cursor: hand;
+            cursor: progress;
         }
         #DashboardModules .dndArea.gridContainerZone { float:left;margin:5px;}
     </style>
